--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1925,3 +1925,15 @@ hr.style18:before {
   border-top: 1px solid #eee; }
 .card-product .title {
   margin-top: 0; }
+
+.btn-lovebook {
+  font-weight: 500; 
+  font-size: 14px; 
+  letter-spacing: 1px; 
+  display: inline-block; 
+  padding: 12px 36px; 
+  border-radius: 50px; 
+  transition: 0.5s; 
+  background-color:#CE1212; 
+  color:white;
+}
